# easy-sdk

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  coverage.xml  django-api-docs-generator-prd.md  easy-sdk-prd.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  package_validation.yml
examples/: django_docs_config.toml  usage_examples.py
sample_projects/ecommerce_api/: README.md  db.sqlite3  easy-sdk.config.yaml  manage.py  requirements.txt
sample_projects/ecommerce_api/easy_sdk/docs/api/: conf.py  index.rst
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/.doctrees/: environment.pickle  index.doctree
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/.doctrees/apps/: index.doctree
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/.doctrees/apps/products/: index.doctree  serializers.doctree
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/_sources/: index.rst.txt
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/_sources/apps/: index.rst.txt
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/_sources/apps/products/: serializers.rst.txt
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/_static/: alabaster.css  custom.css
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/apps/: index.html
sample_projects/ecommerce_api/easy_sdk/docs/api/_build/html/apps/products/: index.html  serializers.html
sample_projects/ecommerce_api/easy_sdk/docs/api/_static/: custom.js
sample_projects/ecommerce_api/easy_sdk/docs/api/apps/: index.rst
sample_projects/ecommerce_api/easy_sdk/docs/api/apps/products/: index.rst  serializers.rst
sample_projects/ecommerce_api/easy_sdk/docs/api/easy_sdk/: index.rst
sample_projects/ecommerce_api/easy_sdk/docusaurus/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
sample_projects/ecommerce_api/easy_sdk/docusaurus/docs/: intro.md
sample_projects/ecommerce_api/easy_sdk/docusaurus/docs/easy_sdk/: README.md  intro.md
sample_projects/ecommerce_api/easy_sdk/docusaurus/docs/easy_sdk/api/: _category_.json
sample_projects/ecommerce_api/easy_sdk/docusaurus/docs/easy_sdk/api/orders/: _category_.json  index.md
sample_projects/ecommerce_api/easy_sdk/docusaurus/docs/easy_sdk/api/products/: _category_.json  index.md
sample_projects/ecommerce_api/easy_sdk/docusaurus/docs/easy_sdk/api/reviews/: _category_.json  index.md
sample_projects/ecommerce_api/easy_sdk/docusaurus/docs/easy_sdk/api/users/: _category_.json  index.md
sample_projects/ecommerce_api/easy_sdk/docusaurus/src/components/ApiExplorer/: endpointConverter.ts  index.tsx
sample_projects/ecommerce_api/easy_sdk/docusaurus/src/components/DynamicTypeLoader/: index.tsx  styles.module.css
sample_projects/ecommerce_api/easy_sdk/docusaurus/src/components/MultiLanguageTypeViewer/: index.tsx  styles.module.css
sample_projects/ecommerce_api/easy_sdk/docusaurus/src/components/TypeFileLoader/: index.tsx
sample_projects/ecommerce_api/easy_sdk/types/: common.d.ts  index.d.ts  orders.d.ts  products.d.ts  reviews.d.ts  users.d.ts
sample_projects/ecommerce_api/ecommerce_api/: asgi.py  settings.py  urls.py  wsgi.py
sample_projects/ecommerce_api/orders/: models.py  serializers.py  urls.py  views.py
sample_projects/ecommerce_api/orders/migrations/: 0001_initial.py
sample_projects/ecommerce_api/products/: models.py  serializers.py  urls.py  views.py
sample_projects/ecommerce_api/products/management/commands/: create_sample_data.py
sample_projects/ecommerce_api/products/migrations/: 0001_initial.py
sample_projects/ecommerce_api/reviews/: models.py  serializers.py  urls.py  views.py
sample_projects/ecommerce_api/reviews/migrations/: 0001_initial.py
sample_projects/ecommerce_api/users/: auth_views.py  models.py  permissions.py  serializers.py  urls.py  views.py
sample_projects/ecommerce_api/users/migrations/: 0001_initial.py
src/django_docs_generator/: __init__.py
src/django_docs_generator/ai/: __init__.py  engine.py
src/django_docs_generator/analyzers/: django_scanner.py  serializer_analyzer.py
src/django_docs_generator/cli/: main.py
src/django_docs_generator/config/: __init__.py
src/django_docs_generator/core/: __init__.py  config.py  generator.py
src/django_docs_generator/generators/: __init__.py  sphinx_generator.py
src/easy_sdk/: __init__.py
src/easy_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/easy_sdk/ai/: engine.py  prompts.py
src/easy_sdk/analyzers/: __init__.py  django_scanner.py  model_analyzer.py  serializer_analyzer.py  view_analyzer.py
src/easy_sdk/cli/: __init__.py  main.py
src/easy_sdk/core/: config.py  generator.py
src/easy_sdk/generators/: docusaurus_generator.py  enhanced_typescript_generator.py  language_templates.py  multi_language_generator.py  sdk_manager.py  sphinx_generator.py  typescript_generator.py
src/easy_sdk/generators/sdks/: base_sdk_generator.py  python_sdk_generator.py  typescript_sdk_generator.py
src/easy_sdk/templates/: __init__.py
src/easy_sdk/templates/docusaurus/components/ApiExplorer/: styles.module.css
src/easy_sdk/templates/docusaurus/components/SwaggerApiDocs/: generateSwaggerMarkdown.ts  index.tsx
src/easy_sdk/utils/: __init__.py  naming_conventions.py
tests/: __init__.py  conftest.py  django_settings.py  urls.py
tests/integration/: test_full_generation.py
tests/unit/: test_config.py  test_django_scanner.py  test_generators.py  test_serializer_analyzer.py
